--- a/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
+++ b/src/app/features/po/initiate-po/po-supplier/po-supplier.component.html
@@ -1,22 +1,22 @@
-  <div class="row ">
-     <div class="col-xs-6">
-         <mat-form-field class="example-form-field border-input p-l-20 border-input p-r-20">
-              <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
-              <button mat-button matSuffix mat-icon-button>
-                <mat-icon>search</mat-icon>
-              </button>
-            </mat-form-field>
-     </div>
-    <div class="col-xs-6 text-right p-t-10">
-      <span>
-        <!-- <mat-form-field class="example-form-field border-input p-l-20 border-input p-r-20">
+<div class="row ">
+  <div class="col-xs-6">
+    <mat-form-field class="example-form-field border-input p-l-20 border-input p-r-20">
+      <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
+      <button mat-button matSuffix mat-icon-button>
+        <mat-icon>search</mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
+  <div class="col-xs-6 text-right p-t-10">
+    <span>
+      <!-- <mat-form-field class="example-form-field border-input p-l-20 border-input p-r-20">
           <input matInput placeholder="Search Supplier" type="search" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
           <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
         </mat-form-field> -->
-      </span>
-        <span class="p-r-5">
+    </span>
+    <span class="p-r-5">
       <span class=" m-b-5 m-r-10 m-l-15 font-bold color-main cursor-pointer" (click)="openSupplierDialog()">
         <span class="font-size20">
           +
@@ -26,17 +26,15 @@
         </span>
       </span>
     </span>
-      <span>
-        <button [disabled]="!form.valid" mat-raised-button matStepperNext class="main-background-color main-button color-white">
-          Next
-        </button>
-      </span>
-    </div>
+    <span>
+      <button [disabled]="!form.valid" mat-raised-button matStepperNext (click)="choosenSupplier()" class="main-background-color main-button color-white">
+        Next
+      </button>
+    </span>
   </div>
+</div>
 
-
-<form *ngIf="allSuppliers" [formGroup]="form" (ngSubmit)="choosenSupplier()">
-
+<form *ngIf="allSuppliers" [formGroup]="form" (click)="choosenSupplier()">
   <table mat-table [dataSource]="allSuppliers | SearchPipe: searchText:'supplier_name'" class="mat-elevation-z8 col-sm-12">
     <!-- Supplier Name Column -->
     <ng-container matColumnDef="Supplier Name">
