dashboard-backgrnd-overly changed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -102,7 +102,7 @@
 }
 
 .update-info, .terms-conditions {
-  background-image: url("/assets/images/dashboard-overlay.png");
+  background-image: url("/assets/images/background-image-overlay.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
