user -> accountstatus and accountOwner check done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -516,3 +516,7 @@ mat-accordion {
 .mat-horizontal-stepper-header-container {
   height: 54px !important;
 }
+
+.cursor-default{
+  cursor: default !important ;
+}
