Terms after signup API integrated, and role conditional fixes in user profile screen Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/first-login/terms-conditions/terms-conditions.component.html
+++ b/src/app/features/first-login/terms-conditions/terms-conditions.component.html
@@ -19,7 +19,7 @@
 
                     <div class="terms-conditions__actions w-50 mx-auto mt-4 d-flex justify-content-between">
                         <button class="btn btn-warning hollow-btn" (click)="logout()">Decline</button>
-                        <button class="btn btn-warning next-btn" [routerLink]="(['/profile/update-info'])">Accept</button>
+                        <button class="btn btn-warning next-btn" (click)="acceptTerms()" >Accept</button>
                     </div>
                 </div>
             </div>
