--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -5,7 +5,15 @@
       <mat-card class="parent">
         <form [formGroup]="form">
           <div class="row">
-            <div class="col-xs-6 text-right">
+            <div class="col-xs-3  text -left border-input">
+              <mat-form-field class="input-search-padding-zero">
+                <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}"/>
+                <button mat-button matSuffix mat-icon-button>
+                  <mat-icon>search</mat-icon>
+                </button>
+              </mat-form-field>
+            </div>
+            <div class="col-xs-3 text-right">
               <mat-form-field class="border-select p-t-0">
                 <mat-label *ngIf="!selectedCategory.length">Select Trades</mat-label>
                 <mat-select formControlName="selectedTrades" multiple>
@@ -73,17 +81,7 @@
           </button>
         </div> -->
         <div *ngIf="showTable">
-          <div class="row p-t-10 p-b-10">
-            <div class="col-sm-8  border-input">
-              <!-- <mat-form-field class="input-search-padding-zero">
-            <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" />
-            <button mat-button matSuffix mat-icon-button>
-              <mat-icon>search</mat-icon>
-            </button>
-          </mat-form-field> -->
-            </div>
-          </div>
-          <div *ngFor="let data of categoryData | SearchPipe: searchMaterial:'data'">
+          <div *ngFor="let data of categoryData | SearchMaterial: searchMaterial:'materialList':'materialName'">
             <app-bom-preview #preview [category]="data" (searchData)="searchData($event)" (inputEntered)="checkValidations($event)"></app-bom-preview>
           </div>
         </div>
