--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -8,12 +8,12 @@
 </div>
 
 <mat-accordion displayMode="flat" multi class="mat-table" *ngIf="this.newMaterialData && this.newMaterialData.length > 0">
-  <section matSort class="mat-header-row blue-background-color-color-white-section">
-    <span class="mat-header-cell" mat-sort-header="name">Material Name</span>
-    <span class="mat-header-cell" mat-sort-header="estimatedQty">Estimated Quantity</span>
-    <span class="mat-header-cell" mat-sort-header="requestedQuantity">Requested Quantity</span>
-    <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
-    <span class="mat-header-cell" mat-sort-header="availableQuantity">Available Stock</span>
+ <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
+    <span class="mat-header-cell material" mat-sort-header="name">Material Name</span>
+    <span class="mat-header-cell material" mat-sort-header="estimatedQty">Estimated Quantity</span>
+    <span class="mat-header-cell material" mat-sort-header="requestedQuantity">Requested Quantity</span>
+    <span class="mat-header-cell material" mat-sort-header="requiredDate">Required Date</span>
+    <span class="mat-header-cell material" mat-sort-header="availableQuantity">Available Stock</span>
   </section>
   <div>
     <mat-expansion-panel *ngFor="let material of newMaterialData | SearchPipe: searchMaterial:'GlobalMaterial':'materialName'" class="myPanel">
