--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -626,6 +626,8 @@ mat-icon {
     overflow-y: scroll;
     padding-left:1px;
     padding-right: 0px;
+    white-space: pre-line;
+    line-height: 15px;
 }
 
 .header-bell-menu button.mat-menu-item:hover{
@@ -695,7 +697,7 @@ h3 {
     text-decoration:underline;
 }
 .body-of-notification{
-    max-height: 288px;
+    //max-height: 288px;
    // overflow-y: scroll;
 }
 
