--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -60,8 +60,8 @@
                                                 <img src="assets/images/icon1.png" alt="Awarded Purchase Order" class="img-fluid">
                                             </div> -->
                       <div class="stats__content">
-                        <h2 class="mb-1" [routerLink]="['/po/detail-list']" *ngIf="poData.totalCount">{{ poData?.totalCount }}</h2>
-                        <h2 class="mb-1" [routerLink]="['/po/detail-list']" *ngIf="!poData.totalCount">0</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po/detail-list']" *ngIf="poData.totalCount">{{ poData?.totalCount }}</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po/detail-list']" *ngIf="!poData.totalCount">0</h2>
                         <p class="mb-0">Awarded Purchase Order</p>
                       </div>
                     </div>
@@ -71,8 +71,8 @@
                                                 <img src="assets/images/po-amount-icon.png" alt="Awarded PO Amount" class="img-fluid">
                                             </div> -->
                       <div class="stats__content">
-                        <h2 class="mb-1" [routerLink]="['/po/detail-list']" *ngIf="poData.totalValue">₹ {{ poData?.totalValue | number }}</h2>
-                        <h2 class="mb-1" [routerLink]="['/po/detail-list']" *ngIf="!poData.totalValue">₹ 0</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po/detail-list']" *ngIf="poData.totalValue">₹ {{ poData?.totalValue | number }}</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/po/detail-list']" *ngIf="!poData.totalValue">₹ 0</h2>
                         <p class="mb-0">Awarded P.O. Amount</p>
                       </div>
                     </div>
@@ -86,8 +86,8 @@
                                                 <img src="assets/images/icon6.png" alt="Awarded Purchase Order" class="img-fluid">
                                             </div> -->
                       <div class="stats__content">
-                        <h2 class="mb-1" [routerLink]="['/rfq/rfq-detail']" *ngIf="rfqData.totalCount">{{ rfqData?.totalCount }}</h2>
-                        <h2 class="mb-1" [routerLink]="['/rfq/rfq-detail']" *ngIf="!rfqData.totalCount">0</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq/rfq-detail']" *ngIf="rfqData.totalCount">{{ rfqData?.totalCount }}</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq/rfq-detail']" *ngIf="!rfqData.totalCount">0</h2>
                         <p class="mb-0">Number of RFQ</p>
                       </div>
                     </div>
@@ -97,8 +97,8 @@
                                                 <img src="assets/images/po-amount-icon.png" alt="Awarded PO Amount" class="img-fluid">
                                             </div> -->
                       <div class="stats__content">
-                        <h2 class="mb-1" [routerLink]="['/rfq/rfq-detail']" *ngIf="rfqData.totalValue">₹ {{ rfqData?.totalValue | number: "1.2-2" }}</h2>
-                        <h2 class="mb-1" [routerLink]="['/rfq/rfq-detail']" *ngIf="!rfqData.totalValue">₹ 0</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq/rfq-detail']" *ngIf="rfqData.totalValue">₹ {{ rfqData?.totalValue | number: "1.2-2" }}</h2>
+                        <h2 class="mb-1 cursor-pointer" [routerLink]="['/rfq/rfq-detail']" *ngIf="!rfqData.totalValue">₹ 0</h2>
                         <p class="mb-0">RFQ Amount</p>
                       </div>
                     </div>
