--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -517,6 +517,10 @@ mat-accordion {
   height: 54px !important;
 }
 
-.cursor-default{
+.cursor-default {
   cursor: default !important ;
+}
+
+.mat-card-width {
+  max-width: 127px;
 }
