--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -7,7 +7,7 @@
           <div class="row">
             <div class="col-xs-3  text -left border-input">
               <mat-form-field class="input-search-padding-zero">
-                <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}"/>
+                <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}" />
                 <button mat-button matSuffix mat-icon-button>
                   <mat-icon>search</mat-icon>
                 </button>
@@ -15,7 +15,7 @@
             </div>
             <div class="col-xs-3 text-right">
               <mat-form-field class="border-select p-t-0">
-                <mat-label *ngIf="!selectedCategory.length">Select Trades</mat-label>
+                <mat-label *ngIf="!categoryData.length">Select Trades</mat-label>
                 <mat-select formControlName="selectedTrades" multiple>
                   <div class="display-flex">
                     <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Category Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
@@ -40,29 +40,23 @@
                   <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download BOM Template</a></span
                 >
               </div>
-              <div class="mr-3">
+              <div class="mr-3  cursor-pointer">
                 <input
-                  class="fileupload cursor-pointer width-200"
                   type="file"
                   accept=".xlsx"
                   #fileDropRef
                   id="fileDropRef"
+                  class="fileupload cursor-pointer"
                   style="display: none;"
                   multiple
                   (change)="uploadExcel($event.target.files)"
                 />
-                <label class="cursor-pointer upload-template">
-                  <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30" />
-                  <span class="cursor-pointer">Upload BOM Template</span>
-                </label>
+                <label for="fileDropRef" class="cursor-pointer upload-template">
+                  <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer" /> Upload BOM Template</label
+                >
               </div>
               <div>
-                <button
-                  mat-raised-button
-                  class="main-background-color main-button color-white pull-right save-material-button"
-                  (click)="saveCategory()"
-                  [disabled]="!isAllFormsValid"
-                >
+                <button mat-raised-button class="main-background-color main-button color-white pull-right save-material-button" (click)="saveCategory()">
                   Add to BOM
                 </button>
               </div>
@@ -81,10 +75,16 @@
           </button>
         </div> -->
         <div *ngIf="showTable">
-          <div *ngFor="let data of categoryData | SearchMaterial: searchMaterial:'materialList':'materialName'">
-            <app-bom-preview #preview [category]="data" (searchData)="searchData($event)" (inputEntered)="checkValidations($event)"></app-bom-preview>
-          </div>
+          <!-- <div *ngFor="let data of categoryData"> -->
+          <app-bom-preview
+            #preview
+            [searchMat]="searchMaterial"
+            [category]="categoryData"
+            (searchData)="searchData($event)"
+            (inputEntered)="checkValidations($event)"
+          ></app-bom-preview>
         </div>
+        <!-- </div> -->
       </mat-card>
     </div>
   </div>
