Verify Email done in Invite User and add/edit user pop up Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/first-login/add-user/add-user.component.html
+++ b/src/app/features/first-login/add-user/add-user.component.html
@@ -14,7 +14,7 @@
               <div class="row p-l-30" [formGroupName]="i">
                 <div class="col-md-4">
                   <mat-form-field class="border-input w-100">
-                    <input matInput type="email" placeholder="*Email" formControlName="email" />
+                    <input matInput type="email" placeholder="*Email" (input)="verifyEmail($event,addUserForm.controls.other.controls[i].controls['email'],i)" formControlName="email" />
                   </mat-form-field>
 
                   <mat-error
@@ -27,6 +27,7 @@
                   >
                     Enter Valid Email
                   </mat-error>
+                   <small class="form-error-msg" *ngIf="(index[i]==false)">Email already in use.</small>
                   <!-- other.controls.other.controls[i].controls.email.errors -->
                 </div>
 
@@ -66,10 +67,12 @@
                 </div>
               </div>
             </div>
-
+              <div class="text-center col-md-12 mt-4">
+                 <small class="form-error-msg" *ngIf="(count == 1)">You can't add duplicate email address.</small>
+              </div>
             <div class="text-center col-md-12 mt-4">
               <button class="btn btn-outline-warning mr-3" [routerLink]="['/dashboard']">Skip</button>
-              <button class="btn btn-warning next-btn" (click)="submit()" [disabled]="!addUserForm.valid">Done</button>
+              <button class="btn btn-warning next-btn" (click)="submit()" [disabled]="!addUserForm.valid || (!emailVerified) || (count==1)">Done</button>
             </div>
           </form>
         </div>
