--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -40,23 +40,29 @@
                   <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download BOM Template</a></span
                 >
               </div>
-              <div class="mr-3  cursor-pointer">
+              <div class="mr-3">
                 <input
+                  class="fileupload cursor-pointer width-200"
                   type="file"
                   accept=".xlsx"
                   #fileDropRef
                   id="fileDropRef"
-                  class="fileupload cursor-pointer"
                   style="display: none;"
                   multiple
                   (change)="uploadExcel($event.target.files)"
                 />
-                <label for="fileDropRef" class="cursor-pointer upload-template">
-                  <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer" /> Upload BOM Template</label
-                >
+                <label class="cursor-pointer upload-template">
+                  <img src="assets/images/upload.png" alt="upload" class="img-fluid mr-2 w-30" />
+                  <span class="cursor-pointer">Upload BOM Template</span>
+                </label>
               </div>
               <div>
-                <button mat-raised-button class="main-background-color main-button color-white pull-right save-material-button" (click)="saveCategory()">
+                <button
+                  mat-raised-button
+                  class="main-background-color main-button color-white pull-right save-material-button"
+                  (click)="saveCategory()"
+                  <!-- [disabled]="!isAllFormsValid" --></button>
+                >
                   Add to BOM
                 </button>
               </div>
