--- a/src/app/features/bom/bom-preview/bom-preview.component.html
+++ b/src/app/features/bom/bom-preview/bom-preview.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="selectedCategory" [formGroup]="quantityForms">
+<form *ngIf="selectedCategory.length" [formGroup]="quantityForms">
   <ng-container formArrayName="forms">
     <span [formGroupName]="c" *ngFor="let category of selectedCategory; let c = index">
       <mat-accordion>
