--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="row m-0">
-        <div class="col-md-8 pl-0">
+        <div class="d-none d-sm-block col-md-12 col-lg-8 pl-0">
             <div class="min-height">
                 <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.png"
                     alt="construction-site-image" class="signup-image" style="width: 100%;" />
@@ -8,8 +8,8 @@
                     alt="construction-site-image" class="signup-image" style="width: 100%;" />
             </div>
         </div>
-        <div class="col-md-4 parent">
-            <div class="form-design mt-5">
+        <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
+            <div class="form-design mt-5 justify-content-center">
 
                 <!-- buildsupply logo -->
                 <img src="../../../assets/images/loginLogo.png" alt="BuildSupply" class="logo-img mb-4 mt-4" />
