--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -3,7 +3,7 @@
      <ng-container *ngIf="materialDataLength == 0 && projectWiseData==0">
        <div class=" wrapper-btn-center">
           <div class="add-user-img">
-                <img src="../../../../assets/images/global-store.png" alt="BuildSupply_Logo">
+                <img src="../../../assets/images/global-store.png" alt="BuildSupply_Logo">
                   <div>
                         <p>
                           You haven't created any project yet. <br>
