--- a/src/app/features/global-store/global-store.component.html
+++ b/src/app/features/global-store/global-store.component.html
@@ -1,6 +1,6 @@
 <div class="page-start-point ">
   <div class="p-l-20 p-r-20 p-b-20 min-height" >
-     <ng-container *ngIf="materialDataLength == 0 && projectWiseData==0">
+     <ng-container *ngIf="(materialDataLength == 0) && (projectWiseData==0)">
        <div class=" wrapper-btn-center">
           <div class="add-user-img">
                 <img src="../../../assets/images/global-store.png" alt="BuildSupply_Logo">
