--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <mat-accordion displayMode="flat" multi class="mat-table" *ngIf="this.newMaterialData && this.newMaterialData.length > 0">
- <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
+  <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
     <span class="mat-header-cell material" mat-sort-header="name">Material Name</span>
     <span class="mat-header-cell material" mat-sort-header="estimatedQty">Estimated Quantity</span>
     <span class="mat-header-cell material" mat-sort-header="requestedQuantity">Requested Quantity</span>
@@ -24,14 +24,14 @@
           </div>
         </span>
 
-        <span class="mat-cell p-l-40 m-l-20">
+        <span class="mat-cell">
           {{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span>
         </span>
-        <span class="mat-cell p-l-40 m-l-20"
+        <span class="mat-cell"
           >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
         >
         <span class="mat-cell">{{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
-        <span class="mat-cell p-l-50"
+        <span class="mat-cell"
           >{{
             material.GlobalMaterial.deliveredQty != null && material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.deliveredQty - material.GlobalMaterial.issuedQty : 0
           }}
@@ -45,10 +45,10 @@
               {{ project.Projects.projectName }}
             </div>
           </span>
-          <span class="mat-cell m-l-10" style="padding-left: 32px;">
+          <span class="mat-cell">
             {{ project.ProjectEstimatedQnt }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
           >
-          <span class="mat-cell m-l-10" style="padding-left: 34px;"
+          <span class="mat-cell"
             >{{ project.Projects.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
           >
           <span class="mat-cell">{{ project.Projects.nearDueDate | date: "dd MMM yyy" }}</span>
@@ -58,7 +58,7 @@
           <mat-expansion-panel-header class="mat-row material-project-details">
             <span class="mat-cell"></span>
             <span class="mat-cell"></span>
-            <span class="mat-cell" style="padding-left: 32px;">{{ material.quantity }}</span>
+            <span class="mat-cell">{{ material.quantity }}</span>
             <span class="mat-cell">{{ material.dueDate | date: "dd MMM yyy" }}</span>
             <span class="mat-cell"></span>
           </mat-expansion-panel-header>
