--- a/src/app/features/first-login/terms-conditions/terms-conditions.component.html
+++ b/src/app/features/first-login/terms-conditions/terms-conditions.component.html
@@ -1,10 +1,10 @@
 <section class="terms-conditions">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 offset-md-2">
+            <div class="col-xs-12 terms-margin-set-width col-md-8 offset-md-2">
                 <div class="terms-conditions__popup p-4">
                     <div class="terms-conditions__logo text-center mb-4">
-                        <img src="assets/images/loginLogo.png" alt="Material Manager Logo" class="img-fluid w-40" />
+                       <h1 class="font-size20 font-bold">Terms & Conditions</h1>
                     </div>
 
                     <div class="terms-conditions__outer-gray">
@@ -17,7 +17,7 @@
                         </p>
                     </div>
 
-                    <div class="terms-conditions__actions w-50 mx-auto mt-4 d-flex justify-content-between">
+                    <div class="terms-conditions__actions w-50 mx-auto mt-4 d-flex justify-content-center">
                         <button class="btn btn-warning hollow-btn" (click)="logout()">Decline</button>
                         <button class="btn btn-warning next-btn" (click)="acceptTerms()" >Accept</button>
                     </div>
