--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -1,15 +1,15 @@
 <section class="update-info">
   <div class="container">
     <div class="row">
-      <div class="col-md-8 offset-md-2">
+      <div class="col-sm-12 terms-margin-set-width col-md-8 offset-md-2">
         <div class="update-info__popup p-4">
           <form class="update-info__form" *ngIf="userInfoForm" [formGroup]="userInfoForm" (ngSubmit)="submit()">
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-sm-12 col-md-12">
                 <h3 class="user-profile text-center text-uppercase pt-2 pb-4" *ngIf="users">{{ users.organizationName }}</h3>
               </div>
 
-              <div class="col-md-6">
+              <div class="col-sm-12 col-md-6">
                 <div class="phot-title"></div>
                 <div class="user-photo">
                   <img [src]="localImg || 'assets/images/default-image.png'" class="img-fluid user_photo" alt="" />
@@ -23,7 +23,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6">
+              <div class="col-sm-12 col-md-6">
                 <!-- <h4 class="org-name text-uppercase" *ngIf="users">{{ users.organizationName }}</h4> -->
                 <!-- <mat-form-field class="border-input w-100"> -->
                 <!-- <input matInput type="text" formControlName="organizationName"> -->
@@ -89,7 +89,7 @@
                                 </div>
                             </div> -->
 
-              <div class="col-md-12" *ngIf="users.roleName === 'l1'">
+              <div class="col-sm-12 col-md-12 choose-trades" *ngIf="users.roleName === 'l1'">
                 <p style="font-weight: 600;">Choose Trades</p>
                 <mat-chip-list multiple id="chipList" [selectable]="true">
                   <mat-chip
