--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -155,8 +155,13 @@
   }
 }
 
+.invite-users{
+  max-height: 500px;
+  overflow-y: scroll;
+}
 .add-user {
   height: 100%;
+  padding-top:0px;
 }
 
 .width-28 {
@@ -380,5 +385,11 @@
    .choose-trades{
      padding-top: 20px;
    }
+  }
+}
+
+@media only screen and (min-width: 768px){
+  .add-invite-user-form{
+    padding-left: 30px;
   }
 }
