--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -59,8 +59,8 @@
                 </td>
               </ng-container>
 
-              <ng-container matColumnDef="Certified Quantity">
-                <th mat-header-cell *matHeaderCellDef class="text-align-center">Certified Quantity</th>
+              <ng-container matColumnDef="Delivered Quantity">
+                <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
                 <td mat-cell *matCellDef="let element" class="text-align-center">
                   {{ element.deliveredQty }}
                 </td>
