--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -40,7 +40,7 @@
                   <a (click)="downloadExcel('assets/images/Master_data.xlsx')"> Download BOM Template</a></span
                 >
               </div>
-              <div class="mr-3 p-t-10 cursor-pointer">
+              <div class="mr-3 cursor-pointer">
                 <input
                   type="file"
                   accept=".xlsx"
