--- a/src/assets/scss/pages/signin-signup.scss
+++ b/src/assets/scss/pages/signin-signup.scss
@@ -25,6 +25,11 @@
 }
 
 .signup-image{
+    height: 112vh;
+    object-fit: cover;
+}
+
+.login-image{
     height: 100vh;
     object-fit: cover;
 }
