--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -393,3 +393,8 @@
     padding-left: 30px;
   }
 }
+@media only screen and (max-width: 768px){
+  .float-right-invite-delBtn{
+    float: right;
+  }
+}
