--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -5,7 +5,7 @@
                 <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.png"
                     alt="construction-site-image" class="signup-image" style="width: 100%;" />
                 <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.png"
-                    alt="construction-site-image" class="signup-image" style="width: 100%;" />
+                    alt="construction-site-image" class="login-image" style="width: 100%;" />
             </div>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-4 offset-lg-0 parent">
@@ -28,6 +28,16 @@
                         </div>
                     </mat-tab>
                 </mat-tab-group>
+                <div class="row text-align-center">
+                    <div class="col-sm-12 p-t-10">
+                        <div class="font-size20 font-bold blue-color p-5">3 Months Free Usage</div>
+                         <div class="font-size16 p-5">Sign Up to avail three months free trail</div>
+                    </div>
+                     <div class="col-sm-12 p-t-15">
+                        <div class="font-size16 p-l-5 p-r-5">You will be charged ₹9999/month</div>
+                         <div class="font-size16 p-l-5 p-r-5">post completion of your free trail</div>
+                    </div>
+                </div>
 
             </div>
         </div>
